@@ -1,3 +1,6 @@
+Upcoming:
+- The Builder and Shield will now (if possible) use a fake player with the same UUID as the player that placed the builder
+
 1.16-3.0.16:
 - Fix for McJtyLib update
 
